NSC runs speed test cli and logs results to database

--- a/NSCController/NSC.Controller.csproj
+++ b/NSCController/NSC.Controller.csproj
@@ -14,7 +14,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NSCController</RootNamespace>
     <AssemblyName>NSCController</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
@@ -24,6 +24,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -51,6 +52,7 @@
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -58,16 +60,14 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
@@ -94,10 +94,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\DeviceController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="NetworkController.cs" />
+    <Compile Include="Controllers\NetworkController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -111,17 +112,15 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NSCDAL\NSC - DAL.csproj">
-      <Project>{4fd1a345-fbfd-472f-9a15-b146c8c25759}</Project>
-      <Name>NSC - DAL</Name>
+    <ProjectReference Include="..\NSC.DAL\NSC.DAL.csproj">
+      <Project>{3e9d6e48-1e8e-472b-a5f9-7fb48c0efadd}</Project>
+      <Name>NSC.DAL</Name>
     </ProjectReference>
-    <ProjectReference Include="..\NSCViewModels\NSCViewModels.csproj">
-      <Project>{ce9f40e4-cf2e-4d91-b2fb-23f89d88ebae}</Project>
-      <Name>NSCViewModels</Name>
+    <ProjectReference Include="..\NSC.Service\NSC.Service.csproj">
+      <Project>{3D00FA12-64AF-4A00-BD6B-3B20D38DCE7B}</Project>
+      <Name>NSC.Service</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
