Added viewmodels from stash

--- a/NSC.DAL/NSC.DAL.csproj
+++ b/NSC.DAL/NSC.DAL.csproj
@@ -81,7 +81,10 @@
     <Compile Include="Repository\NSCRepository.cs" />
     <Compile Include="Repository\UpdateStatus.cs" />
     <Compile Include="ViewModels\DeviceViewModel.cs" />
+    <Compile Include="ViewModels\NetworkInterfaceViewModel.cs" />
+    <Compile Include="ViewModels\NetworkStatTestViewModel.cs" />
     <Compile Include="ViewModels\NetworkViewModel.cs" />
+    <Compile Include="ViewModels\SpeedTestServerViewModel.cs" />
     <Compile Include="ViewModels\UserRoleViewModel.cs" />
     <Compile Include="ViewModels\UserViewModel.cs" />
   </ItemGroup>
