--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,6 +11,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
+    "noImplicitAny": false,
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
@@ -20,6 +21,6 @@
     "jsx": "react"
   },
   "include": [
-    "src", "redux/config.js"
+    "src", "src/redux/config.js"
   ]
 }
