--- a/NSC.Service/NSC.Service.csproj
+++ b/NSC.Service/NSC.Service.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Services\NetworkService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\SpeedTestService.cs" />
+    <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NSC.DAL\NSC.DAL.csproj">
