--- a/NSCController/NSC.Controller.csproj
+++ b/NSCController/NSC.Controller.csproj
@@ -106,6 +106,7 @@
     </Compile>
     <Compile Include="Controllers\NetworkController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\NSCResources.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
