--- a/NSCController/Web.config
+++ b/NSCController/Web.config
@@ -103,7 +103,7 @@
   <connectionStrings>
     <add name="NSCContext" connectionString="Data Source=DESKTOP-1KQO5JG\INFO5052;Initial Catalog=NSCDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
     <!--<add name="NSCContext" connectionString="Data Source=DESKTOP-1KQO5JG\INFO5052;Initial Catalog=NSCDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>-->
-    <add name="NSCContext" connectionString="data source=SCOTT-LAPTOP2;initial catalog=NSCDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <!--<add name="NSCContext" connectionString="data source=SCOTT-LAPTOP2;initial catalog=NSCDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <entityFramework>
     <providers>
