--- a/NSC.DAL/App.config
+++ b/NSC.DAL/App.config
@@ -10,6 +10,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="NSCContext" connectionString="data source=SCOTT-LAPTOP2;initial catalog=NSCDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <!--<add name="NSCContext" connectionString="data source=SCOTT-LAPTOP2;initial catalog=NSCDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>-->
+    <add name="NSCContext" connectionString="Data Source=DESKTOP-F310U7P\PERSONALPROJECTS;Initial Catalog=NSCDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+
   </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
