--- a/NSC.Service/NSC.Service.csproj
+++ b/NSC.Service/NSC.Service.csproj
@@ -35,6 +35,9 @@
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="SendGrid">
+      <HintPath>..\packages\SendGrid.9.21.1\lib\net40\SendGrid.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,6 +48,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NSCResources.cs" />
+    <Compile Include="Services\EmailService.cs" />
     <Compile Include="Services\DeviceService.cs" />
     <Compile Include="Services\NetworkService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
