--- a/NSCController/packages.config
+++ b/NSCController/packages.config
@@ -20,5 +20,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="SendGrid" version="9.21.1" targetFramework="net461" />
+  <package id="starkbank-ecdsa" version="1.2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
