--- a/NSCController/NSC.Controller.csproj
+++ b/NSCController/NSC.Controller.csproj
@@ -189,6 +189,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="JWT\" />
     <Folder Include="Models\" />
     <Folder Include="Views\User\" />
   </ItemGroup>
